src/LEvalParser.java
// Generated from LEval.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LEvalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, NEWLINE=2, SPACE=3, COMMENT=4, SEMICOLON=5, LPAREN=6, RPAREN=7, 
		LBRACK=8, RBRACK=9, LCHEVRON=10, RCHEVRON=11, COMMA=12, DOT=13, COLONCOLON=14, 
		ASSIGN=15, ASSIGN_NO_EVAL=16, LAMBDA=17, HELP=18, CLEAR=19, EXIT=20, LISTALL=21, 
		SHOWLASTINFOS=22, VERBOSE=23, REDUCE=24, BETA=25, ETA=26, BOTH=27, PRINT=28, 
		PRINTNOEVAL=29, IMPORT=30, DEFAULTCOMBINATOR=31, FIGOPTION=32, TRUE_=33, 
		FALSE_=34, EVAL=35, STEPS=36, HIGHLIGHT=37, HORIZONTAL=38, NUMBER=39, 
		NAME=40, STRING=41;
	public static final int
		RULE_program = 0, RULE_instruction = 1, RULE_booleanOption = 2, RULE_reduceOption = 3, 
		RULE_latexExportOptions = 4, RULE_term = 5, RULE_application = 6, RULE_rExpr = 7, 
		RULE_eExpr = 8, RULE_lambdaVars = 9, RULE_tupleElements = 10, RULE_listElements = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "instruction", "booleanOption", "reduceOption", "latexExportOptions", 
			"term", "application", "rExpr", "eExpr", "lambdaVars", "tupleElements", 
			"listElements"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", null, null, null, "';'", "'('", "')'", "'['", "']'", "'<'", 
			"'>'", "','", "'.'", "'::'", "':='", "'<-'", null, "'help'", "'clear'", 
			"'exit'", "'listall'", "'showlastinfos'", "'verbose'", "'reduce'", "'beta'", 
			"'eta'", "'both'", "'print'", "'pne'", "'import'", "'defaultcombinator'", 
			"'figure'", "'on'", "'off'", "'eval'", "'steps'", "'highlight'", "'horizontal'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "NEWLINE", "SPACE", "COMMENT", "SEMICOLON", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "LCHEVRON", "RCHEVRON", "COMMA", "DOT", "COLONCOLON", 
			"ASSIGN", "ASSIGN_NO_EVAL", "LAMBDA", "HELP", "CLEAR", "EXIT", "LISTALL", 
			"SHOWLASTINFOS", "VERBOSE", "REDUCE", "BETA", "ETA", "BOTH", "PRINT", 
			"PRINTNOEVAL", "IMPORT", "DEFAULTCOMBINATOR", "FIGOPTION", "TRUE_", "FALSE_", 
			"EVAL", "STEPS", "HIGHLIGHT", "HORIZONTAL", "NUMBER", "NAME", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LEval.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LEvalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LEvalParser.EOF, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(LEvalParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(LEvalParser.SEMICOLON, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(24);
					instruction();
					setState(25);
					match(SEMICOLON);
					}
					} 
				}
				setState(31);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HELP) | (1L << CLEAR) | (1L << EXIT) | (1L << LISTALL) | (1L << SHOWLASTINFOS) | (1L << VERBOSE) | (1L << REDUCE) | (1L << PRINT) | (1L << PRINTNOEVAL) | (1L << IMPORT) | (1L << DEFAULTCOMBINATOR) | (1L << FIGOPTION) | (1L << NAME))) != 0)) {
				{
				setState(32);
				instruction();
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(33);
					match(SEMICOLON);
					}
				}

				}
			}

			setState(38);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public TerminalNode HELP() { return getToken(LEvalParser.HELP, 0); }
		public TerminalNode CLEAR() { return getToken(LEvalParser.CLEAR, 0); }
		public TerminalNode EXIT() { return getToken(LEvalParser.EXIT, 0); }
		public TerminalNode LISTALL() { return getToken(LEvalParser.LISTALL, 0); }
		public TerminalNode SHOWLASTINFOS() { return getToken(LEvalParser.SHOWLASTINFOS, 0); }
		public TerminalNode VERBOSE() { return getToken(LEvalParser.VERBOSE, 0); }
		public BooleanOptionContext booleanOption() {
			return getRuleContext(BooleanOptionContext.class,0);
		}
		public TerminalNode REDUCE() { return getToken(LEvalParser.REDUCE, 0); }
		public ReduceOptionContext reduceOption() {
			return getRuleContext(ReduceOptionContext.class,0);
		}
		public TerminalNode PRINT() { return getToken(LEvalParser.PRINT, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode PRINTNOEVAL() { return getToken(LEvalParser.PRINTNOEVAL, 0); }
		public TerminalNode IMPORT() { return getToken(LEvalParser.IMPORT, 0); }
		public TerminalNode STRING() { return getToken(LEvalParser.STRING, 0); }
		public TerminalNode DEFAULTCOMBINATOR() { return getToken(LEvalParser.DEFAULTCOMBINATOR, 0); }
		public TerminalNode FIGOPTION() { return getToken(LEvalParser.FIGOPTION, 0); }
		public TerminalNode NAME() { return getToken(LEvalParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(LEvalParser.ASSIGN, 0); }
		public TerminalNode ASSIGN_NO_EVAL() { return getToken(LEvalParser.ASSIGN_NO_EVAL, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		int _la;
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HELP:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				match(HELP);
				}
				break;
			case CLEAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				match(CLEAR);
				}
				break;
			case EXIT:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				match(EXIT);
				}
				break;
			case LISTALL:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				match(LISTALL);
				}
				break;
			case SHOWLASTINFOS:
				enterOuterAlt(_localctx, 5);
				{
				setState(44);
				match(SHOWLASTINFOS);
				}
				break;
			case VERBOSE:
				enterOuterAlt(_localctx, 6);
				{
				setState(45);
				match(VERBOSE);
				setState(46);
				booleanOption();
				}
				break;
			case REDUCE:
				enterOuterAlt(_localctx, 7);
				{
				setState(47);
				match(REDUCE);
				setState(48);
				reduceOption();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 8);
				{
				setState(49);
				match(PRINT);
				setState(50);
				term();
				}
				break;
			case PRINTNOEVAL:
				enterOuterAlt(_localctx, 9);
				{
				setState(51);
				match(PRINTNOEVAL);
				setState(52);
				term();
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 10);
				{
				setState(53);
				match(IMPORT);
				setState(54);
				match(STRING);
				}
				break;
			case DEFAULTCOMBINATOR:
				enterOuterAlt(_localctx, 11);
				{
				setState(55);
				match(DEFAULTCOMBINATOR);
				setState(56);
				term();
				}
				break;
			case FIGOPTION:
				enterOuterAlt(_localctx, 12);
				{
				setState(57);
				match(FIGOPTION);
				setState(58);
				booleanOption();
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 13);
				{
				setState(59);
				match(NAME);
				setState(60);
				_la = _input.LA(1);
				if ( !(_la==ASSIGN || _la==ASSIGN_NO_EVAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(61);
				term();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanOptionContext extends ParserRuleContext {
		public TerminalNode TRUE_() { return getToken(LEvalParser.TRUE_, 0); }
		public TerminalNode FALSE_() { return getToken(LEvalParser.FALSE_, 0); }
		public BooleanOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanOption; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitBooleanOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanOptionContext booleanOption() throws RecognitionException {
		BooleanOptionContext _localctx = new BooleanOptionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_booleanOption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !(_la==TRUE_ || _la==FALSE_) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReduceOptionContext extends ParserRuleContext {
		public TerminalNode BETA() { return getToken(LEvalParser.BETA, 0); }
		public TerminalNode ETA() { return getToken(LEvalParser.ETA, 0); }
		public TerminalNode BOTH() { return getToken(LEvalParser.BOTH, 0); }
		public ReduceOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reduceOption; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitReduceOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReduceOptionContext reduceOption() throws RecognitionException {
		ReduceOptionContext _localctx = new ReduceOptionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_reduceOption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BETA) | (1L << ETA) | (1L << BOTH))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LatexExportOptionsContext extends ParserRuleContext {
		public List<TerminalNode> EVAL() { return getTokens(LEvalParser.EVAL); }
		public TerminalNode EVAL(int i) {
			return getToken(LEvalParser.EVAL, i);
		}
		public List<TerminalNode> STEPS() { return getTokens(LEvalParser.STEPS); }
		public TerminalNode STEPS(int i) {
			return getToken(LEvalParser.STEPS, i);
		}
		public List<TerminalNode> HIGHLIGHT() { return getTokens(LEvalParser.HIGHLIGHT); }
		public TerminalNode HIGHLIGHT(int i) {
			return getToken(LEvalParser.HIGHLIGHT, i);
		}
		public List<TerminalNode> HORIZONTAL() { return getTokens(LEvalParser.HORIZONTAL); }
		public TerminalNode HORIZONTAL(int i) {
			return getToken(LEvalParser.HORIZONTAL, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(LEvalParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(LEvalParser.NUMBER, i);
		}
		public LatexExportOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_latexExportOptions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitLatexExportOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LatexExportOptionsContext latexExportOptions() throws RecognitionException {
		LatexExportOptionsContext _localctx = new LatexExportOptionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_latexExportOptions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(76);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case EVAL:
					{
					setState(68);
					match(EVAL);
					}
					break;
				case STEPS:
					{
					setState(69);
					match(STEPS);
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__0) {
						{
						setState(70);
						match(T__0);
						setState(71);
						match(NUMBER);
						}
					}

					}
					break;
				case HIGHLIGHT:
					{
					setState(74);
					match(HIGHLIGHT);
					}
					break;
				case HORIZONTAL:
					{
					setState(75);
					match(HORIZONTAL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EVAL) | (1L << STEPS) | (1L << HIGHLIGHT) | (1L << HORIZONTAL))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public ApplicationContext application() {
			return getRuleContext(ApplicationContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			application();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ApplicationContext extends ParserRuleContext {
		public List<RExprContext> rExpr() {
			return getRuleContexts(RExprContext.class);
		}
		public RExprContext rExpr(int i) {
			return getRuleContext(RExprContext.class,i);
		}
		public ApplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_application; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitApplication(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApplicationContext application() throws RecognitionException {
		ApplicationContext _localctx = new ApplicationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_application);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			rExpr();
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(83);
					rExpr();
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RExprContext extends ParserRuleContext {
		public EExprContext eExpr() {
			return getRuleContext(EExprContext.class,0);
		}
		public TerminalNode COLONCOLON() { return getToken(LEvalParser.COLONCOLON, 0); }
		public RExprContext rExpr() {
			return getRuleContext(RExprContext.class,0);
		}
		public RExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitRExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RExprContext rExpr() throws RecognitionException {
		RExprContext _localctx = new RExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			eExpr();
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(90);
				match(COLONCOLON);
				setState(91);
				rExpr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EExprContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(LEvalParser.LPAREN, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LEvalParser.RPAREN, 0); }
		public TerminalNode NAME() { return getToken(LEvalParser.NAME, 0); }
		public TerminalNode NUMBER() { return getToken(LEvalParser.NUMBER, 0); }
		public TerminalNode LAMBDA() { return getToken(LEvalParser.LAMBDA, 0); }
		public LambdaVarsContext lambdaVars() {
			return getRuleContext(LambdaVarsContext.class,0);
		}
		public TerminalNode DOT() { return getToken(LEvalParser.DOT, 0); }
		public TerminalNode LCHEVRON() { return getToken(LEvalParser.LCHEVRON, 0); }
		public TupleElementsContext tupleElements() {
			return getRuleContext(TupleElementsContext.class,0);
		}
		public TerminalNode RCHEVRON() { return getToken(LEvalParser.RCHEVRON, 0); }
		public TerminalNode LBRACK() { return getToken(LEvalParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(LEvalParser.RBRACK, 0); }
		public ListElementsContext listElements() {
			return getRuleContext(ListElementsContext.class,0);
		}
		public EExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitEExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EExprContext eExpr() throws RecognitionException {
		EExprContext _localctx = new EExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_eExpr);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(LPAREN);
				setState(95);
				term();
				setState(96);
				match(RPAREN);
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(NAME);
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				match(NUMBER);
				}
				break;
			case LAMBDA:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				match(LAMBDA);
				setState(101);
				lambdaVars();
				setState(102);
				match(DOT);
				setState(103);
				term();
				}
				break;
			case LCHEVRON:
				enterOuterAlt(_localctx, 5);
				{
				setState(105);
				match(LCHEVRON);
				setState(106);
				tupleElements();
				setState(107);
				match(RCHEVRON);
				}
				break;
			case LBRACK:
				enterOuterAlt(_localctx, 6);
				{
				setState(109);
				match(LBRACK);
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << LBRACK) | (1L << LCHEVRON) | (1L << LAMBDA) | (1L << NUMBER) | (1L << NAME))) != 0)) {
					{
					setState(110);
					listElements();
					}
				}

				setState(113);
				match(RBRACK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LambdaVarsContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(LEvalParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(LEvalParser.NAME, i);
		}
		public LambdaVarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambdaVars; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitLambdaVars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LambdaVarsContext lambdaVars() throws RecognitionException {
		LambdaVarsContext _localctx = new LambdaVarsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lambdaVars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(NAME);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(117);
				match(NAME);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TupleElementsContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LEvalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LEvalParser.COMMA, i);
		}
		public TupleElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tupleElements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LEvalVisitor ) return ((LEvalVisitor<? extends T>)visitor).visitTupleElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TupleElementsContext tupleElements() throws RecognitionException {
		TupleElementsContext _localctx = new TupleElementsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tupleElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			term();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(124);
				match(COMMA);
				setState(125);
				term();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
